// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Media Post renders correctly with a SoundCloud source 1`] = `
<div
  className="layoutMock"
>
  <div
    className="css-1v7u0sc"
  >
    <div
      className="css-1aa5heh"
    >
      <article
        className="h-entry"
        id="mock-media-id"
      >
        <div
          className="css-1blzwpa"
        >
          Mock category
        </div>
        <h1
          className="p-name css-1sus4jf"
        >
          A Mock Blog Post
        </h1>
        <time
          className="dt-published created"
        >
          Published 
          Mon, 17 Jun 2024 03:30:26 GMT
        </time>
        <div
          style={
            {
              "display": "none",
            }
          }
        >
          <a
            className="u-url"
            href="https://www.chrisvogt.me/music/mock-media"
          />
          <span
            className="u-uid"
          >
            mock-media-id
          </span>
          <div
            className="p-summary"
          >
            Mock Description
          </div>
          <img
            alt=""
            className="u-photo"
            src="mock-banner.jpg"
          />
          <span
            className="p-category"
          >
            Mock Category
          </span>
          <span
            className="p-category"
          >
            mock
          </span>
          <span
            className="p-category"
          >
            test
          </span>
          <span
            className="p-category"
          >
            music
          </span>
        </div>
        <div
          className="e-content article-content"
        >
          <div>
            Lorum ipsum dolor sit amet.
          </div>
        </div>
      </article>
    </div>
  </div>
</div>
`;

exports[`Media Post renders correctly with a YouTube source 1`] = `
<div
  className="layoutMock"
>
  <div
    className="css-rh73xg"
  >
    <div
      className="css-io6end"
    >
      <div
        className="youtubeMock"
      >
        mockYoutubeSrc
      </div>
    </div>
  </div>
  <div
    className="css-1v7u0sc"
  >
    <div
      className="css-1aa5heh"
    >
      <article
        className="h-entry"
        id="mock-media-id"
      >
        <div
          className="css-1blzwpa"
        >
          Mock category
        </div>
        <h1
          className="p-name css-1sus4jf"
        >
          A Mock Blog Post
        </h1>
        <time
          className="dt-published created"
        >
          Published 
          Mon, 17 Jun 2024 03:30:26 GMT
        </time>
        <div
          style={
            {
              "display": "none",
            }
          }
        >
          <a
            className="u-url"
            href="https://www.chrisvogt.me/music/mock-media"
          />
          <span
            className="u-uid"
          >
            mock-media-id
          </span>
          <div
            className="p-summary"
          >
            Mock Description
          </div>
          <img
            alt=""
            className="u-photo"
            src="mock-banner.jpg"
          />
          <span
            className="p-category"
          >
            Mock Category
          </span>
          <span
            className="p-category"
          >
            mock
          </span>
          <span
            className="p-category"
          >
            test
          </span>
          <span
            className="p-category"
          >
            music
          </span>
        </div>
        <div
          className="e-content article-content"
        >
          <div>
            Lorum ipsum dolor sit amet.
          </div>
        </div>
      </article>
    </div>
  </div>
</div>
`;

exports[`Media Post renders correctly with no media sources 1`] = `
<div
  className="layoutMock"
>
  <div
    className="css-1v7u0sc"
  >
    <div
      className="css-1aa5heh"
    >
      <article
        className="h-entry"
        id="mock-media-id"
      >
        <div
          className="css-1blzwpa"
        >
          Mock category
        </div>
        <h1
          className="p-name css-1sus4jf"
        >
          A Mock Blog Post
        </h1>
        <time
          className="dt-published created"
        >
          Published 
          Mon, 17 Jun 2024 03:30:26 GMT
        </time>
        <div
          style={
            {
              "display": "none",
            }
          }
        >
          <a
            className="u-url"
            href="https://www.chrisvogt.me/music/mock-media"
          />
          <span
            className="u-uid"
          >
            mock-media-id
          </span>
          <div
            className="p-summary"
          >
            Mock Description
          </div>
          <img
            alt=""
            className="u-photo"
            src="mock-banner.jpg"
          />
          <span
            className="p-category"
          >
            Mock Category
          </span>
          <span
            className="p-category"
          >
            mock
          </span>
          <span
            className="p-category"
          >
            test
          </span>
          <span
            className="p-category"
          >
            music
          </span>
        </div>
        <div
          className="e-content article-content"
        >
          <div>
            Lorum ipsum dolor sit amet.
          </div>
        </div>
      </article>
    </div>
  </div>
</div>
`;

exports[`Media Post renders the Head component with SEO data 1`] = `
<div
  className="seoMock"
/>
`;
